--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carousel</title>
+    <title>Matrix</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/03edc7a1fb.js" crossorigin="anonymous"></script>
 </head>
@@ -14,7 +14,7 @@
     <div class="matrix" id="product">
     </div>
 
-    <script src="/app/app.js"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
